--- a/istg.html
+++ b/istg.html
@@ -5,17 +5,46 @@
 </head>
 <body>
 
+<style>
+
+.st1{position:absolute;
+	left:75px;
+	bottom:50px;
+	border-radius:5px;
+}
+
+.st2{position:absolute;
+	left:10px;
+	top:10px;
+	border-style:solid;
+	border-color:#0c0f1d;
+	border-radius:10px;
+	padding-bottom:0px;
+	background-color:#0c0f1d;
+}
+
+.st3{position:absolute;
+	right:550px;
+	top:130px;
+	border-style:solid;
+	border-color:#845a69;
+	border-radius:10px;
+	background-color:#845a69;
+}
+
+body{background-color:#0c0f1d;}
 
 
 
+</style>
 
 
 
-<img src="kam.jpg" alt="sleepover" usemap="#kamisato" style="height:355px;width:800px;">
+<img src="kam.jpg" alt="sleepover" usemap="#kamisato" style="height:355px;width:800px;" class="st3">
 
 
 <map name="kamisato">
-    <area href="aya.jpg" coords="159,101,244,239"  shape="rect" target="_blank">
+    <area href="file:///C:/Users/Admin/Pictures/Yi/test.html" coords="159,101,244,239"  shape="rect" target="_blank">
     <area href="toh.jpg" coords="261,33,349,186" shape="rect" target="_blank">
     <area href="sussy.jpg" coords="364,58,445,166" shape="rect" target="_blank">
     <area href="yoi.jpg" coords="454,40,535,154" shape="rect" target="_blank">
@@ -25,12 +54,10 @@
 
 
 
+<a href="https://hoyolab.com/" target="_blank" class="st2"><img src="lq-Photoroom.png" alt="Hoyolab Image Link" style="width:311px;height:168spx;"></a>
 
 
-
-
-
-
+<a href="" target="_blank" class="st4"><img src="Gam.jpg" alt="sleepover" style="height:225px;width:225px;" class="st1"></a>
 
 
 
